fix: implemented code to fix horizontal overflow on recipes container for screens from 320px to 430px

--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -74,3 +74,57 @@
   line-height: 30px;
   color: #fff;
 }
+
+@media screen and (min-width: 320px) and (max-width: 430px) {
+  .recipes {
+    width: 100%;
+    height: auto;
+  }
+
+  .recipes__content {
+    width: 100%;
+  }
+
+  .recipes__title {
+    top: 0;
+    left: 0;
+    max-width: 100%;
+    width: 100%;
+    text-align: center;
+    padding: 15px;
+  }
+
+  .recipes__subtitle {
+    max-width: 0;
+    min-width: fit-content;
+    width: 100%;
+    margin: 0;
+    top: 0;
+    left: 0;
+  }
+
+  .recipes__videos {
+    display: flex;
+    flex-direction: column;
+    -ms-flex-direction: column;
+    gap: 20px;
+    height: auto;
+    width: 100%;
+  }
+
+  .recipes__iframe {
+    width: 100%;
+  }
+
+  .recipes__videos p:first-of-type {
+    position: static;
+  }
+
+  .recipes__videos p:last-of-type {
+    position: static;
+  }
+
+  .recipes__video-caption {
+    width: 100%;
+  }
+}
